feat: multi kc support aligned to svc
