# src/main/java/org/tkit/onecx/iam/bff/rs/controllers/UserRestController.java
@@ -10,45 +10,40 @@ import org.jboss.resteasy.reactive.ClientWebApplicationException;
 import org.jboss.resteasy.reactive.RestResponse;
 import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
 import org.tkit.onecx.iam.bff.rs.mappers.ExceptionMapper;
-import org.tkit.onecx.iam.bff.rs.mappers.UsersMapper;
+import org.tkit.onecx.iam.bff.rs.mappers.UserMapper;
 
-import gen.org.tkit.onecx.iam.bff.rs.internal.UsersInternalApiService;
+import gen.org.tkit.onecx.iam.bff.rs.internal.UserInternalApiService;
 import gen.org.tkit.onecx.iam.bff.rs.internal.model.ProblemDetailResponseDTO;
-import gen.org.tkit.onecx.iam.bff.rs.internal.model.UserPageResultDTO;
 import gen.org.tkit.onecx.iam.bff.rs.internal.model.UserResetPasswordRequestDTO;
-import gen.org.tkit.onecx.iam.bff.rs.internal.model.UserSearchCriteriaDTO;
-import gen.org.tkit.onecx.iam.kc.client.api.UsersInternalApi;
-import gen.org.tkit.onecx.iam.kc.client.model.UserPageResult;
+import gen.org.tkit.onecx.iam.kc.client.api.UserInternalApi;
+import gen.org.tkit.onecx.iam.kc.client.model.ProvidersResponse;
 
 @ApplicationScoped
-public class UsersRestController implements UsersInternalApiService {
+public class UserRestController implements UserInternalApiService {
 
     @Inject
     @RestClient
-    UsersInternalApi usersClient;
+    UserInternalApi usersClient;
 
     @Inject
     ExceptionMapper exceptionMapper;
 
     @Inject
-    UsersMapper usersMapper;
+    UserMapper userMapper;
 
     @Override
-    public Response resetPassword(UserResetPasswordRequestDTO userResetPasswordRequestDTO) {
-
-        try (Response response = usersClient.resetPassword(usersMapper.map(userResetPasswordRequestDTO))) {
-            return Response.status(response.getStatus()).build();
+    public Response getUserProvider() {
+        try (Response response = usersClient.getUserProvider()) {
+            return Response.status(response.getStatus()).entity(userMapper.map(response.readEntity(ProvidersResponse.class)))
+                    .build();
         }
     }
 
     @Override
-    public Response searchUsersByCriteria(UserSearchCriteriaDTO userSearchCriteriaDTO) {
-
-        try (Response response = usersClient.searchUsersByCriteria(usersMapper.map(userSearchCriteriaDTO))) {
-            UserPageResultDTO userPageResult = usersMapper.map(response.readEntity(UserPageResult.class));
-            return Response.status(response.getStatus()).entity(userPageResult).build();
+    public Response resetPassword(UserResetPasswordRequestDTO userResetPasswordRequestDTO) {
+        try (Response response = usersClient.resetPassword(userMapper.map(userResetPasswordRequestDTO))) {
+            return Response.status(response.getStatus()).build();
         }
-
     }
 
     @ServerExceptionMapper
